--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.3",
+        "laravel/framework": "^8.*"
     },
     "autoload": {
         "psr-4": {
