--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "laravel/framework": "8.*"
+        "php": ">=7.3"
     },
     "autoload": {
         "psr-4": {
